--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,21 @@
     "name": "Ejemplo de PWA",
     "start_url": "/index.html",
     "display": "standalone",
-    "background_color": "#4fc3f7",
-    "theme_color": "#ffcb2d",
+    "theme_color": "#81d4f4",
+    "background_color": "#ff6d00",
     "icons": [
       {
-        "src": "img/icono-2048.png",
+        "src": "img/icono2048.png",
         "sizes": "2048x2048",
         "type": "image/png"
       },
       {
-        "src": "img/icono-1024.png",
+        "src": "img/icono1024.png",
         "sizes": "1024x1024",
         "type": "image/png"
       },
       {
-        "src": "img/icono-256.png",
+        "src": "img/icono256.png",
         "sizes": "256x256",
         "type": "image/png"
       }
